# Hoops_Lab

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml  etl-nightly.yml
apps/api/: .dev.vars.example  package-lock.json  package.json  wrangler.toml
apps/api/src/: cache.ts  db.ts  index.ts
apps/api/src/routes/: compare.ts  fatigue.ts  games.ts  health.ts  leaderboards.ts  lineups.ts  momentum.ts  players.ts  root.ts  shotProfiles.ts  teams.ts  translation.ts
apps/api/src/services/: similarity.ts
apps/web/: package-lock.json  package.json  tailwind.config.js  wrangler.toml
apps/web/src/app/: globals.css  layout.jsx  page.jsx
apps/web/src/app/compare/: page.jsx
apps/web/src/app/games/: page.jsx
apps/web/src/app/leaderboards/: page.jsx
apps/web/src/app/lineup-lab/: page.jsx
apps/web/src/components/charts/: metric-bar-chart.jsx  metric-line-chart.jsx  metric-radar-chart.jsx
apps/web/src/components/filters/: entity-search-input.jsx  search-input.jsx  (+1 more)
apps/web/src/lib/: api.js  seasons.js  use-api.js
data/etl/: pyproject.toml
data/etl/src/hoopslab/: __init__.py  config.py
data/etl/src/hoopslab/extract/: __init__.py
data/etl/src/hoopslab/extract/euroleague/: __init__.py  client.py
data/etl/src/hoopslab/extract/nba/: __init__.py  nba_api_client.py
data/etl/src/hoopslab/jobs/: __init__.py  run_nightly.py
data/etl/src/hoopslab/load/: __init__.py  sql_writer.py
data/etl/src/hoopslab/transform/: __init__.py  ids.py
data/schema/: schema.sql
docs/: data_dictionary.md  deployment.md  development.md  modeling.md
(+8 files in other folders)
